syntax = "proto3";
package maxsatinput;
import "formula.proto";
option go_package = "github.com/booleworks/logicng-service/sio/pb";

message MaxSatInput {
    repeated formula.Formula hardFormulas = 1;
    map<string, int64> softFormulas = 2;
}

